# space-weather

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/datasets/: data_preparation.py  time_series.py
src/models/: catboost.py  dt.py  knc.py  lr.py  lstm.py  mlp.py  rnn.py  svc.py
src/utils/: setup_logging.py  utils.py
