[project]
name = "space-weather"
version = "0.1.0"
description = "Various Machine Learning Approaches to Predict Solar Flares"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "catboost>=1.2.8",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "natsort>=8.4.0",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "pathlib>=1.0.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
]
